Thu Oct 13 13:24:29 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* NEWS: Add item about if and while.

	* .gdbinit: Restore `end'; it was not excess.  Reindent
	list-objfiles to make this clear.  Comment out all of
	list-objfiles because old gdb's choke on it.

Wed Oct 12 23:19:08 1994  Ian Lance Taylor  <ian@sanguine.cygnus.com>

	* config/mips/tm-bigmips64.h: Just define TARGET_BYTE_ORDER and
	include tm-mips64.h.

Wed Oct 12 18:02:17 1994  Stan Shebs  (shebs@andros.cygnus.com)

	* Makefile.in (ANNOTATE_OBS): New definition.
	(COMMON_OBS): Add exec.o.
	(annotate.o): Remove extra compile rule.
	* config/*/*.mh, config/*/*.mt: Remove exec.o from *DEPFILES lists
	everywhere.

 	* .gdbinit: Remove excess `end'.

	* exec.c: Merge in RS6000 support from xcoffexec.c.
	(symfile.h, objfiles.h, xcoffsolib.h): Include.
	(vmap): New global variable.
	(exec_close): Close and free objects in vmap chain.
	(exec_file_command) [IBM6000_TARGET]: Set up initial vmap.
	(bfdsec_to_vmap, map_vmap): Moved here from xcoffexec.c.
	(exec_files_info): Print vmap information.
	* xcoffexec.c: Remove.
	* config/rs6000/rs6000.mt, config/rs6000/rs6000lynx.mt
	(TDEPFILES): Use exec.o instead of xcoffexec.o.
	* TODO: Remove pertinent items.

Wed Oct 12 10:08:19 1994  Jeff Law  (law@snake.cs.utah.edu)

	* partial-stab.h (N_TEXT): Delete GDB_TARGET_IS_HPPA kludge; they
	are no longer needed as of gcc-2.6.0.

Tue Oct 11 15:51:01 1994  Ian Lance Taylor  <ian@sanguine.cygnus.com>

	* lynx-nat.c (child_wait): Correct handling of byte reversed SPARC
        Lynx wait status.
	(fetch_core_registers): Don't try to fetch a register if
	regmap maps it to -1.
	* sparc-tdep.c (sparc_frame_find_saved_regs): Use FRAME_SAVED_I0
	and FRAME_SAVED_L0 when setting saved_regs_addr.  SPARC Lynx
	stores the registers in a weird order.

Sat Oct  8 20:59:13 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* blockframe.c (reinit_frame_cache): Reinstate select_frame call
	if inferior_pid is nonzero.
